improve: replace generic page title with descriptive one
- Change title from 'title page for school' to 'Student Portfolio - Queen's School of Computing'
- Improves SEO by providing meaningful page title
- Makes browser tab more informative for users
- Maintains professional appearance for portfolio site

This is a simple incremental improvement that enhances user experience
without changing any functionality.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>title page for school</title>
+    <title>Student Portfolio - Queen's School of Computing</title>
     <link rel="stylesheet" href="style.css"/> <!-- do not change this line -->
   </head>
   <body>
