--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <h2>About Me</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in Computing.</p>
 
-      <!-- ====== ASSIGNEMENT LIST ====== -->
+      <img src="c57.png" alt="discord profile picture" width="240" height="240" />
+
+      <!-- ====== ASSIGNMENT LIST ====== -->
       <h2>Projects</h2>
       <ul>
         <li>Project One — Assignment #1: </li>
