--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
       <!-- ====== CONTACT ====== -->
       <h2>Contact</h2>
-      <p>Email: no. </p>
-      <p>LinkedIn: oh no. </p>
+      <p>Email: 22OYG@queensu.ca </p>
     </main>
   </body>
 </html>
